src/test/deca/context/invalid/provided/ContextSansObjet/Identification/IdentificationString.deca
//Description :
//	identification de variables string et affectations de valeurs
//
//Résultats :
//	Erreur contextuelle
//  Ligne 10 : une variable ne peut pas être du type string


{
	string y = "Hello";
}